<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context="com.oz_heng.apps.android.ccafamilydaycare.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_half"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="@dimen/activity_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/cca_fdc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_half"
                android:text="@string/org_description"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_margin_half"
            android:orientation="horizontal">

            <ImageView
                style="@style/PhotoStyle"
                android:layout_marginEnd="@dimen/activity_margin_quarter"
                android:layout_marginRight="@dimen/activity_margin_quarter"
                android:src="@drawable/cca_photo1" />

            <ImageView
                style="@style/PhotoStyle"
                android:layout_marginLeft="@dimen/activity_margin_quarter"
                android:layout_marginStart="@dimen/activity_margin_quarter"
                android:src="@drawable/cca_photo2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_margin"
            android:orientation="horizontal">

            <ImageView
                style="@style/PhotoStyle"
                android:layout_marginEnd="@dimen/activity_margin_quarter"
                android:layout_marginRight="@dimen/activity_margin_quarter"
                android:src="@drawable/cca_photo3" />

            <ImageView
                style="@style/PhotoStyle"
                android:layout_marginLeft="@dimen/activity_margin_quarter"
                android:layout_marginStart="@dimen/activity_margin_quarter"
                android:src="@drawable/cca_photo4" />
        </LinearLayout>

        <!-- Organisation address -->
        <TextView
            android:id="@+id/org_address"
            style="@style/InfoTextStyle"
            android:drawableLeft="@drawable/ic_location_on"
            android:drawableStart="@drawable/ic_location_on"
            android:text="@string/org_address" />

        <!-- Organisation opening hours -->
        <TextView
            style="@style/InfoTextStyle"
            android:drawableLeft="@drawable/ic_access_time"
            android:drawableStart="@drawable/ic_access_time"
            android:text="@string/org_open_hours" />

        <!-- Organisation web site -->
        <TextView
            style="@style/InfoTextStyle"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_earth"
            android:drawableStart="@drawable/ic_earth"
            android:text="@string/org_website" />

        <!-- Organisation email -->
        <TextView
            style="@style/InfoTextStyle"
            android:autoLink="email"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            android:text="@string/org_email" />

        <!-- Organisation phone -->
        <TextView
            style="@style/InfoTextStyle"
            android:autoLink="phone"
            android:drawableLeft="@drawable/ic_call"
            android:drawableStart="@drawable/ic_call"
            android:text="@string/org_phone" />

    </LinearLayout>
</ScrollView>
